src/test/resources/accept/validIntConstants.ul
boolean bar ()
{
    10;
    105;
    0;
    0000000;
    500545464654644;
}
