src/test/resources/reject/compoundAccessNoSemicolon.ul
boolean bar ()
{
    id[0]
}
